Update copy for homepage.

--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -30,10 +30,10 @@ title: Usman Bashir, your galactic alien friend!
         .row
           .large-12.columns
             %ul#what-i-do
-              %li.web-applications-and-corporate-sites
-                %img{ src: "images/icons/web_applications_and_corporate_sites.png", height: "110px" }
+              %li.web-applications
+                %img{ src: "images/icons/web_applications.png", height: "110px" }
                 %strong
-                  Web Applications &amp; Corporate Sites
+                  Web Applications
               %li.mobile-app-development
                 %img{ src: "images/icons/mobile_app.png", height: "110px" }
                 %strong
