--- a/source/layouts/_header.haml
+++ b/source/layouts/_header.haml
@@ -11,6 +11,6 @@
           %li
             = link_to "Work", "/work"
           %li
-            = link_to "Blog", "/blog"
+            = link_to "Articles", "/articles"
           %li
             = link_to "Contact Me", "/contact-me"
