--- a/source/layouts/article_layout.haml
+++ b/source/layouts/article_layout.haml
@@ -2,4 +2,6 @@
   %article
     .row.content
       .large-10.large-centered.columns
+        %h1
+          = current_article.title
         = yield
