--- a/source/layouts/layout.haml
+++ b/source/layouts/layout.haml
@@ -17,6 +17,8 @@
     
     = stylesheet_link_tag "application"
     = javascript_include_tag "modernizr/modernizr.js"
+
+    = feed_tag :atom, "#{blog.options.prefix.to_s}/feed.xml", title: "Atom Feed"
   
   %body{ class: page_classes }
     = partial "layouts/unsupported_browsers"
