Update the books I'm reading currently.

--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -60,12 +60,12 @@ title: Usman Bashir, your galactic alien friend!
         %p
           %strong Currently Reading
         .book
-          %a{ href: "https://www.goodreads.com/book/show/5470.1984" }
-            %img{ src: "https://d202m5krfqbpi5.cloudfront.net/books/1348990566l/5470.jpg", alt: "Nineteen Eighty-Four", width: "56px" }
-            Nineteen Eighty-Four
-          %span by George Orwell
+          %a{ href: "https://www.goodreads.com/book/show/55030.Cosmos" }
+            %img{ src: "//d.gr-assets.com/books/1388620656l/55030.jpg", alt: "Cosmos", width: "68px" }
+            Cosmos
+          %span by Carl Sagan
         .book
-          %a{ href: "https://www.goodreads.com/book/show/10127019-the-lean-startup" }
-            %img{ src: "https://d202m5krfqbpi5.cloudfront.net/books/1333576876l/10127019.jpg", alt: "The Lean Startup: How Today's Entrepreneurs Use Continuous Innovation to Create Radically Successful Businesses", width: "56px" }
-            The Lean Startup
-          %span by Eric Ries
+          %a{ href: "https://www.goodreads.com/book/show/21411877-zen-pencils" }
+            %img{ src: "//d.gr-assets.com/books/1394989489l/21411877.jpg", alt: "Zen Pencils: Cartoon Quotes from Inspirational Folks", width: "68px" }
+            Zen Pencils
+          %span by Gavin Aung Than
