Automate footer copyright year from now on.

--- a/source/layouts/_footer.haml
+++ b/source/layouts/_footer.haml
@@ -27,5 +27,7 @@
             %a{ href: "/colophon" } Colophon
           %li
             %a{ href: "/rss.xml" } RSS
-      %p &copy; 2014
+      %p
+        &copy; 
+        = Time.now.year
       %p made in jeddah
