Layout the portfolio page and add the Currrva app to it.

--- a/source/work.html.haml
+++ b/source/work.html.haml
@@ -4,9 +4,22 @@ title: Work - Usman Bashir
 .row.content
   .large-10.large-centered.columns
     %h1 Some of my recent work
-    %p
-      I'm still working on this page for the moment, but in the meantime, you can check out some of my work on my 
-      %a{ href: "https://www.behance.net/usman" }
-        Behance profile.
-    %p
-      %em Thanks!
+    .row.project
+      .large-6.columns.intro
+        %h2
+          %img{ src: "images/work/projects/currrva-logo.png", alt: "Currrva Logo", width: "42px" }
+          Currrva Scoreboard
+        %p
+          Currrva allows players of soccer video games (e.g. EA FIFA franchise) to record their results against their friends. From the games played and scorelines, Currrva provides visualizations and graphs for the data provided including: playing form, goals conceded, clean sheets, unbeaten runs.
+        %ul
+          %li.fi-video
+            %a{ href: "#" }
+              Take a sneak peek
+          %li.fi-web
+            %a{ href: "http://www.currrva.com/" }
+              Visit Website
+      .large-6.columns.screenshots
+        %img{ src: "images/work/projects/currrva-app.png", alt: "Currrva Scoreboard App", width: "363px" }
+
+    %a{ href: "https://www.behance.net/usman", class: "more-work" }
+      View rest of my work on Behance
