--- a/source/work.html.haml
+++ b/source/work.html.haml
@@ -4,7 +4,7 @@ title: Work - Usman Bashir
 .row.content
   .large-10.large-centered.columns
     %h1 Some of my recent work
-    .row.project
+    .row.project.currrva-app
       .large-6.columns.intro
         %h2
           %img{ src: "images/work/projects/currrva-logo.png", alt: "Currrva Logo", width: "42px" }
@@ -20,6 +20,20 @@ title: Work - Usman Bashir
               Visit Website
       .large-6.columns.screenshots
         %img{ src: "images/work/projects/currrva-app.png", alt: "Currrva Scoreboard App", width: "363px" }
+
+    .row.project.haweee-app
+      .large-6.columns.intro
+        %h2
+          %img{ src: "images/work/projects/haweee-logo.png", alt: "Haweee Logo", width: "42px" }
+          Haweee
+        %p
+          Haweee is a soccer/football app that helps you and your friends organize, manage and play soccer. Anywhere, any place.
+        %ul
+          %li.fi-web
+            %a{ href: "http://www.haweee.com/" }
+              Visit Website
+      .large-6.columns.screenshots
+        %img{ src: "images/work/projects/haweee-app.png", alt: "Haweee App", width: "363px" }
 
     %a{ href: "https://www.behance.net/usman", class: "more-work" }
       View rest of my work on Behance
