Add Sift app to the portfolio page.

--- a/source/stylesheets/work.scss
+++ b/source/stylesheets/work.scss
@@ -1,5 +1,6 @@
 .work .project { margin-bottom: em-calc(100); }
 
+.work .sift-app .intro { margin-top: em-calc(100); }
 .work .currrva-app .intro { margin-top: em-calc(100); }
 .work .haweee-app .intro { margin-top: em-calc(60); }
 
