--- a/source/work.html.haml
+++ b/source/work.html.haml
@@ -4,6 +4,14 @@ title: Work - Usman Bashir
 .row.content
   .large-10.large-centered.columns
     %h1 Some of my recent work
+    .row.project.sift-app
+      .large-6.columns.intro
+        %h2
+          Sift
+        %p
+          Sift helps you make quick decisions about the content you come across daily. You can later "Sift" through them and save the ones that pique your interest. Read reviews and more about your items and decide which ones to keep and which ones to discard.
+      .large-6.columns.screenshots
+        %img{ src: "images/work/projects/sift-app.png", alt: "Sift App", width: "363px" }
     .row.project.currrva-app
       .large-6.columns.intro
         %h2
@@ -33,7 +41,7 @@ title: Work - Usman Bashir
             %a{ href: "http://www.haweee.com/" }
               Visit Website
       .large-6.columns.screenshots
-        %img{ src: "images/work/projects/haweee-app.png", alt: "Haweee App", width: "363px" }
+        %img{ src: "images/work/projects/haweee-app.png", alt: "Haweee App", width: "416px" }
 
     %a{ href: "https://www.behance.net/usman", class: "more-work" }
       View rest of my work on Behance
