Add Nahdi Amal website to the portfolio page.

--- a/source/stylesheets/work.scss
+++ b/source/stylesheets/work.scss
@@ -3,7 +3,7 @@
   margin-bottom: em-calc(75);
   padding-bottom: em-calc(75);
 }
-.work .haweee-app {
+.work .nahdi-amal-web {
   border: 0 none;
   padding: 0;
 }
@@ -11,6 +11,7 @@
 .work .sift-app .intro { margin-top: em-calc(100); }
 .work .currrva-app .intro { margin-top: em-calc(100); }
 .work .haweee-app .intro { margin-top: em-calc(60); }
+.work .nahdi-amal-web .intro { margin-top: em-calc(40); }
 
 .work .project .intro {
   img { margin-top: em-calc(-6); }
