--- a/source/work.html.haml
+++ b/source/work.html.haml
@@ -43,5 +43,18 @@ title: Work - Usman Bashir
       .large-6.columns.screenshots
         %img{ src: "images/work/projects/haweee-app.png", alt: "Haweee App", width: "416px" }
 
+    .row.project.nahdi-amal-web
+      .large-6.columns.intro
+        %h2
+          Nahdi Amal
+        %p
+          Nahdi Amal was a CSR campaign to encourage users to sign up for the fight against diabetes using social networks and having them carry out a pledge of their choosing to help the fight and sharing it with their friends.
+        %ul
+          %li.fi-web
+            %a{ href: "https://www.behance.net/gallery/11836419/Nahdi-Amal" }
+              Visit Website
+      .large-6.columns.screenshots
+        %img{ src: "images/work/projects/nahdi-amal-web.png", alt: "Nahdi Amal Website", width: "416px" }
+
     %a{ href: "https://www.behance.net/usman", class: "more-work" }
       View rest of my work on Behance
