Improve the copy for the Behance link.

--- a/source/work.html.haml
+++ b/source/work.html.haml
@@ -57,4 +57,4 @@ title: Work - Usman Bashir
         %img{ src: "images/work/projects/nahdi-amal-web.png", alt: "Nahdi Amal Website", width: "416px" }
 
     %a{ href: "https://www.behance.net/usman", class: "more-work" }
-      View rest of my work on Behance
+      checkout rest of my work on behance
