Replace recent work from homepage with a block to sign up for my newsletter.

--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -42,30 +42,52 @@ title: Usman Bashir, your galactic alien friend!
                 %img{ src: "images/icons/project_management.png", height: "110px" }
                 %strong
                   Project Management
-    .row.work-and-reading
-      .large-8.columns.recent-work
+    .row.newsletter-and-reading
+      .large-8.columns.newsletter
         %p
-          %strong Recent Work
+          %strong Subscribe to my Newsletter
         .row
-          .large-4.columns
-            %a{ href: "https://www.behance.net/gallery/Nahdi-Amal-WIP/11836419" }
-              %img{ src: "images/work/projects/nahdi-amal.png", alt: "Nahdi Amal", width: "202px" }
-          .large-4.columns
-            %a{ href: "https://www.behance.net/gallery/Nahdi-Full-of-Hope/8947215" }
-              %img{ src: "images/work/projects/nahdi.png", alt: "Nahdi - Full of Hope", width: "202px" }
-          .large-4.columns
-            %a{ href: "https://www.behance.net/gallery/3N-Jeddah/3609895" }
-              %img{ src: "images/work/projects/3n-jeddah.png", alt: "3N Jeddah", width: "202px" }
+          .large-12.columns
+            %p
+              I'll be sending out a irregular newsletter soon, called 
+              %strong "Bits &amp; Bytes".
+              Each issue will feature a roundup of blog posts and links from this site as well as exclusive newsletter only content. In addition, I'll be sharing details of new products and projects I'll be working on.
+            <link href="//cdn-images.mailchimp.com/embedcode/classic-081711.css" rel="stylesheet" type="text/css">
+            <div id="mc_embed_signup">
+            <form action="//usmanbashir.us4.list-manag297b33ec6f69dbd92d1192839&amp;id=992d1ebec0" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+            <div class="row">
+            <div class="large-9 columns">
+            <div class="mc-field-group">
+            <input type="email" placeholder="Email Address" value="" name="EMAIL" class="required email" id="mce-EMAIL">
+            </div>
+            </div>
+            <div class="large-3 columns">
+            <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button tiny radius success">
+            </div>
+            </div>
+            <div id="mc_embed_signup_scroll">
+            <div id="mce-responses" class="clear">
+            <div class="response" id="mce-error-response" style="display:none"></div>
+            <div class="response" id="mce-success-response" style="display:none"></div>
+            </div> 
+            <div style="position: absolute; left: -5000px;"><input type="text" name="b_297b33ec6f69dbd92d1192839_992d1ebec0" tabindex="-1" value=""></div>
+            <div class="clear">
+            </div>
+            </div>
+            </form>
+            </div>
+            <script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script>
+            <script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
       .large-4.columns.currently-reading
         %p
           %strong Currently Reading
         .book
           %a{ href: "https://www.goodreads.com/book/show/55030.Cosmos" }
-            %img{ src: "//d.gr-assets.com/books/1388620656l/55030.jpg", alt: "Cosmos", width: "68px" }
+            %img{ src: "//d.gr-assets.com/books/1388620656l/55030.jpg", alt: "Cosmos", width: "80px" }
             Cosmos
           %span by Carl Sagan
         .book
           %a{ href: "https://www.goodreads.com/book/show/21411877-zen-pencils" }
-            %img{ src: "//d.gr-assets.com/books/1394989489l/21411877.jpg", alt: "Zen Pencils: Cartoon Quotes from Inspirational Folks", width: "68px" }
+            %img{ src: "//d.gr-assets.com/books/1394989489l/21411877.jpg", alt: "Zen Pencils: Cartoon Quotes from Inspirational Folks", width: "80px" }
             Zen Pencils
           %span by Gavin Aung Than
