--- a/source/contact-me.html.haml
+++ b/source/contact-me.html.haml
@@ -5,17 +5,19 @@ title: Contact Me - Usman Bashir
   .large-10.large-centered.columns
     %h1
       Get in touch with me
+
+    :markdown
+      You can find me on [Twitter](https://twitter.com/ubax) or shoot me an email at [me@usmanbashir.com](mailto:me@usmanbashir.com).
+
+    %h2 networking
     %p
-      So, you've got a cool project in mind and feel I can help you with it?
-      Then don't hesitate, I would love to hear about it and help you.
+      If you're based in Jeddah, don't be a stranger. Let's grab a coffee or a yogurt. I love to network.
+
+    %h2 work 
     %p
-      Just fill out my 
+      So, you've got a project in mind and feel I can help you with it?
+      Cool, don't hesitate, I would love to hear about it and see what I can do.
+    %p
+      Just fill out this 
       %a{ href: "https://docs.google.com/spreadsheet/viewform?usp=drive_web&formkey=dGc5MXNLM2xsSDNGbDE2ODFXZ2hiQVE6MQ" } diabolically long form 
-      or send me an email on 
-      %a{ href: "mailto:me@usmanbashir.com" } me@usmanbashir.com 
-      and I'll reply back as soon as possible, though it usually takes about 1-3 business days.
-    %p
-      I'm always interested in connecting with like minded people or opportunities to work on cool projects.
-      So, please feel free to ping me on the interwebs and say hi on
-      %a{ href: "https://twitter.com/ubax" } Twitter
-      or any of the other networks listed below.
+      or send me an email and I'll reply back as soon as possible, though it usually takes about 1-3 business days.
