--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -52,32 +52,7 @@ title: Usman Bashir, your galactic alien friend!
               I'll be sending out a irregular newsletter soon, called 
               %strong "Bits &amp; Bytes".
               Each issue will feature a roundup of blog posts and links from this site as well as exclusive newsletter only content. In addition, I'll be sharing details of new products and projects I'll be working on.
-            <link href="//cdn-images.mailchimp.com/embedcode/classic-081711.css" rel="stylesheet" type="text/css">
-            <div id="mc_embed_signup">
-            <form action="//usmanbashir.us4.list-manag297b33ec6f69dbd92d1192839&amp;id=992d1ebec0" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-            <div class="row">
-            <div class="large-9 columns">
-            <div class="mc-field-group">
-            <input type="email" placeholder="Email Address" value="" name="EMAIL" class="required email" id="mce-EMAIL">
-            </div>
-            </div>
-            <div class="large-3 columns">
-            <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button tiny radius success">
-            </div>
-            </div>
-            <div id="mc_embed_signup_scroll">
-            <div id="mce-responses" class="clear">
-            <div class="response" id="mce-error-response" style="display:none"></div>
-            <div class="response" id="mce-success-response" style="display:none"></div>
-            </div> 
-            <div style="position: absolute; left: -5000px;"><input type="text" name="b_297b33ec6f69dbd92d1192839_992d1ebec0" tabindex="-1" value=""></div>
-            <div class="clear">
-            </div>
-            </div>
-            </form>
-            </div>
-            <script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script>
-            <script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
+            = partial "newsletter"
       .large-4.columns.currently-reading
         %p
           %strong Currently Reading
