Update the books I'm currently reading.

--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -15,7 +15,7 @@ title: Usman Bashir, your galactic alien friend!
         .row.short-bio
           .large-4.columns
             %p
-              I'm a full-stack software developer, a budding UX designer and an entrepreneur based in Saudi Arabia.
+              I'm a full-stack software developer, a UX designer and an entrepreneur based in Saudi Arabia.
           .large-4.columns
             %p
               I've been programming since I was 13 years old &amp; creating meaningful user experiences for over a decade.
@@ -57,12 +57,12 @@ title: Usman Bashir, your galactic alien friend!
         %p
           %strong Currently Reading
         .book
+          %a{ href: "https://www.goodreads.com/book/show/23588216-responsible-responsive-design" }
+            %img{ src: "//d.gr-assets.com/books/1416385239l/23588216.jpg", alt: "Responsible Responsive Design", width: "80px" }
+            Responsible Responsive Design
+          %span by Scott Jehl
+        .book
           %a{ href: "https://www.goodreads.com/book/show/55030.Cosmos" }
             %img{ src: "//d.gr-assets.com/books/1388620656l/55030.jpg", alt: "Cosmos", width: "80px" }
             Cosmos
           %span by Carl Sagan
-        .book
-          %a{ href: "https://www.goodreads.com/book/show/21411877-zen-pencils" }
-            %img{ src: "//d.gr-assets.com/books/1394989489l/21411877.jpg", alt: "Zen Pencils: Cartoon Quotes from Inspirational Folks", width: "80px" }
-            Zen Pencils
-          %span by Gavin Aung Than
