Touchup the copy for the home and work page.

--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -9,7 +9,7 @@ title: Usman Bashir, your galactic alien friend!
           %h1
             Hello, I'm Usman. I build products.
           %p
-            And, I can help you with your next project.
+            I’m here to bring your mobile and web projects into life.
     .row
       .large-12.columns.who-am-i
         .row.short-bio
