--- a/source/work.html.haml
+++ b/source/work.html.haml
@@ -3,7 +3,7 @@ title: Work - Usman Bashir
 ---
 .row.content
   .large-10.large-centered.columns
-    %h1 Some of my recent work
+    %h1 Some of my work
     .row.project.sift-app
       .large-6.columns.intro
         %h2
