Add Google Webmaster Tools verification meta tag.

--- a/source/layouts/layout.haml
+++ b/source/layouts/layout.haml
@@ -9,6 +9,8 @@
     -# Use title if it's in the page YAML frontmatter
     %title= current_page.data.title || "Usman Bashir, your galactic alien friend!"
 
+    <meta name="google-site-verification" content="IBIoyWk5FZXc9twOaOFtMFNdTGPLKrzd9sW5skZ2a80" />
+
     -# Set the viewport width to device width for mobile
     %meta{ name: "viewport", content: "width=device-width, initial-scale=1.0" }
 
