Add a skeleton structure for the sidebar and the articles index page.
- Setup some sane defaults for the blog and live-reloader.
- Constrain styles for the header and footer elements.

--- a/source/layouts/_header.haml
+++ b/source/layouts/_header.haml
@@ -11,4 +11,6 @@
           %li
             = link_to "Work", "/work"
           %li
+            = link_to "Articles", "/articles"
+          %li
             = link_to "Contact Me", "/contact-me"
