--- a/source/articles/index.html.haml
+++ b/source/articles/index.html.haml
@@ -21,7 +21,7 @@ per_page: 2
                   %ul.inline-list
                     - article.tags.each do |tag|
                       %li
-                        = "##{tag}"
+                        = link_to "##{tag}", tag_path(tag)
             .row.date-time
               .large-12.columns
                 %p
@@ -59,5 +59,8 @@ per_page: 2
           %li Working..
     .row.tags
       .large-12.columns
+        %strong Tags
+        = partial "partials/tags"
+        %hr
         %p.text-center
-          %a{ href: "#" } View All Tags
+          = link_to "View All Tags", "/articles/tags"
