--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -9,7 +9,7 @@ title: Usman Bashir, your galactic alien friend!
           %h1
             Hello, I'm Usman. I build products.
           %p
-            I’m here to bring your mobile and web projects into life.
+            I’m here to bring your mobile and web projects to life.
     .row
       .large-12.columns.who-am-i
         .row.short-bio
@@ -57,12 +57,12 @@ title: Usman Bashir, your galactic alien friend!
         %p
           %strong Currently Reading
         .book
-          %a{ href: "https://www.goodreads.com/book/show/23588216-responsible-responsive-design" }
-            %img{ src: "//d.gr-assets.com/books/1416385239l/23588216.jpg", alt: "Responsible Responsive Design", width: "80px" }
-            Responsible Responsive Design
-          %span by Scott Jehl
+          %a{ href: "https://www.goodreads.com/book/show/15241.The_Two_Towers" }
+            %img{ src: "//d.gr-assets.com/books/1298415523l/15241.jpg", alt: "The Two Towers (The Lord of the Rings #2)", width: "80px" }
+            The Two Towers - The Lord of the Rings
+          %span by J.R.R. Tolkien
         .book
-          %a{ href: "https://www.goodreads.com/book/show/55030.Cosmos" }
-            %img{ src: "//d.gr-assets.com/books/1388620656l/55030.jpg", alt: "Cosmos", width: "80px" }
-            Cosmos
-          %span by Carl Sagan
+          %a{ href: "https://www.goodreads.com/book/show/1741472.Programming_Collective_Intelligence" }
+            %img{ src: "//d.gr-assets.com/books/1371685521l/1741472.jpg", alt: "Programming Collective Intelligence: Building Smart Web 2.0 Applications", width: "80px" }
+            Programming Collective Intelligence: Building Smart Web 2.0 Applications
+          %span by Toby Segaran
