--- a/source/tag.html.slim
+++ b/source/tag.html.slim
@@ -1,31 +1,33 @@
 ---
 pageable: true
-per_page: 2
+per_page: 10
 ---
-h1
-  | Articles tagged 
-  = tagname
+.row.content
+  .large-12.columns
+    h1
+      | Articles tagged 
+      = tagname
 
-- if paginate && num_pages > 1
-  p
-    Page
-    = page_number
-    of
-    = num_pages
+    - if paginate && num_pages > 1
+      p
+        Page
+        = page_number
+        of
+        = num_pages
 
-  - if prev_page
-    p
-      = link_to 'Previous page', prev_page
+      - if prev_page
+        p
+          = link_to 'Previous page', prev_page
 
-ul
-  - page_articles.each_with_index do |article, i|
-    li
-      = link_to article.title, article
-      | &nbsp;
-      span
-        = article.date.strftime('%b %e')
+    ul
+      - page_articles.each_with_index do |article, i|
+        li
+          = link_to article.title, article
+          | &nbsp; / 
+          span
+            = article.date.strftime('%B %e, %Y')
 
-- if paginate
-  - if next_page
-    p
-      = link_to 'Next page', next_page
+    - if paginate
+      - if next_page
+        p
+          = link_to 'Next page', next_page
