Add a visual indicator to the navigation menu for the current page

--- a/source/layouts/_header.haml
+++ b/source/layouts/_header.haml
@@ -6,11 +6,11 @@
     .large-8.columns
       %nav.right
         %ul
-          %li
+          %li.nav-about-me
             = link_to "About Me", "/about-me"
-          %li
+          %li.nav-work
             = link_to "Work", "/work"
-          %li
+          %li.nav-articles
             = link_to "Articles", "/articles"
-          %li
+          %li.nav-contact-me
             = link_to "Contact Me", "/contact-me"
