Place the article date just before the headline to mimic a timeline experience

--- a/source/stylesheets/articles.scss
+++ b/source/stylesheets/articles.scss
@@ -10,6 +10,12 @@
     }
   }
 
+  article header time {
+    color: #999;
+    font-size: em-calc(18px);
+    text-rendering: optimizeLegibility;
+  }
+
   article header h1 {
     font-size: em-calc(32px);
 
