--- a/source/articles/index.html.haml
+++ b/source/articles/index.html.haml
@@ -39,7 +39,7 @@ per_page: 5
                   %ul.inline-list
                     - article.tags.each do |tag|
                       %li
-                        = link_to "##{tag}", tag_path(tag)
+                        = link_to "#{tag}", tag_path(tag)
 
 
     -# Not Cool! :(
