--- a/source/articles/categories.html.slim
+++ b/source/articles/categories.html.slim
@@ -1,8 +1,10 @@
 .row.content
-  .large-12.columns
+  .large-8.columns
     h1
       | Categories
     ul
       - sitemap.resources.group_by {|p| p.data["category"]}.reject{|k| k.nil?}.each do |category, pages|
         li
           h5 = link_to category, category_path(category)
+
+  = partial "partials/sidebar"
