--- a/source/articles/index.html.haml
+++ b/source/articles/index.html.haml
@@ -9,24 +9,30 @@ per_page: 5
       %article{ itemscope: true, itemType: "http://schema.org/BlogPosting" }
 
         .row
-          %header.large-12.columns
-            %time{ itemprop: "datePublished", datetime: article.date.strftime('%Y-%m-%d %H:%M:%S%:z') }
-              = article.date.strftime('%B %e, %Y')
-            %h1{ itemprop: "headline" }
-              = link_to article.title, article
+          .large-9.columns
+            .row
+              %header.large-12.columns
+                %h1{ itemprop: "headline" }
+                  = link_to article.title, article
 
-        .row
-          %section.main.large-9.columns{ itemprop: "description" }
-            -# Auto generate article summery if one is not provided.
-            - if article.data[:summary]
-              %p
-                = article.data[:summary]
-            - else
-              = article.summary
+            .row
+              %section.main.large-12.columns{ itemprop: "description" }
+                -# Auto generate article summery if one is not provided.
+                - if article.data[:summary]
+                  %p
+                    = article.data[:summary]
+                - else
+                  = article.summary
 
-            = link_to 'continue reading &#8594;', article
+                = link_to 'continue reading &#8594;', article
 
           %aside.large-3.columns
+            .row.date-published
+              .large-12.columns
+                %ul.inline-list
+                  %li
+                    %time{ itemprop: "datePublished", datetime: article.date.strftime('%Y-%m-%d %H:%M:%S%:z') }
+                      = article.date.strftime('%B %e, %Y')
             - if article.data.key?("category")
               .row.category
                 .large-12.columns
