--- a/source/category.html.slim
+++ b/source/category.html.slim
@@ -2,12 +2,12 @@
 pageable: true
 per_page: 10
 ---
-.row.content
-  .large-8.columns
+.row.content.articles-list
+  .large-9.columns
     h1
-      | Articles categorized under: 
       = category
 
+    // TODO: Need To Rewrite Pagination
     - if paginate && num_pages > 1
       p
         Page
@@ -19,13 +19,28 @@ per_page: 10
         p
           = link_to 'Previous page', prev_page
 
-    ul
-      - page_articles.each_with_index do |article, i|
-        li
-          = link_to article.title, article
-          | &nbsp; / 
-          span
-            = article.date.strftime('%B %e, %Y')
+    - page_articles.each do |article|
+
+      article
+        .row
+          .large-12.columns
+            .row
+              header.large-12.columns
+                h4
+                  = link_to article.title, article
+                time
+                  = article.date.strftime('%B %e, %Y')
+
+            .row
+              section.main.large-12.columns
+                -# Auto generate article summery if one is not provided.
+                - if article.data[:summary]
+                  p
+                    = article.data[:summary]
+                - else
+                  = article.summary
+
+                = link_to 'continue reading &#8594;', article
 
     - if paginate
       - if next_page
